--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
+bin/
+target/
+META-INF/
+logs/
+
+.settings/
+.project
+.classpath
+.mymetadata
+*.iml
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
+.idea/
 # Package Files #
 *.jar
 *.war
 *.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/target
+*.zip
+*.tar.gz
+uic-dubbo-registry.properties
+uic-dubbo-registry.properties.lock
